<resources>
    <string name="app_name">BookProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="url">https://your-api-base-url.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="environment">Enviroment</string>
    <string name="lbl_sign_acc">Sign in to your account</string>
    <string name="lbl_login_subtitle">Enter your username and password to continue</string>
    <string name="username">UserName</string>
    <string name="username_hint">Enter Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forget Password</string>
    <string name="if_you_don_t_have_an_account">If you don’t have an account,</string>
    <string name="register_now">Register Now</string>
    <string name="save">Save\n</string>
    <string name="text_non_functional2">Non \\nFunctional</string>
    <string name="text_functional">Functional</string>
    <string name="collection">collection</string>
    <string name="text_master_list">Master List</string>
    <string name="str_select_all">select all</string>
    <string name="str_unselect_all">Unselect all</string>
    <string name="cancel_Btn">cancel button</string>
    <string name="str_sync_now">Sync Now</string>
    <string name="str_synced_now">Synced Now</string>




</resources>