<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    >


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/masterdata_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardBackgroundColor="@color/agat_text_color"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearlayout1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72sdp"
                    android:layout_margin="@dimen/_16sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/myLeadsCV"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:background="@drawable/brand_primary_light_blue"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:id="@+id/numTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/myLeadTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/text_non_functional2"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/numTV" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/inactiveCL"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:background="@drawable/brand_primary_yellow"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:id="@+id/twinthTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11ssp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/twinthsTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/text_functional"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/twinthTV" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/activeLeadsCV"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/brand_primary_light_grey"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:id="@+id/activeLeadCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/myLead2TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/collection"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/activeLeadCount" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_master_list"
                style="@style/inter_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:text="@string/text_master_list"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/selectAllBtn"
                app:layout_constraintTop_toBottomOf="@id/masterdata_cardView" />

            <TextView
                android:id="@+id/selectAllBtn"
                style="@style/inter_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/str_select_all"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11ssp"
                android:visibility="gone"
                tools:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/masterdata_cardView" />

            <TextView
                android:id="@+id/unselectAllBtn"
                style="@style/inter_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:text="@string/str_unselect_all"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11ssp"
                tools:visibility="gone"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/masterdata_cardView"  />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/syncDataRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_master_list"
                tools:listitem="@layout/sync_all_data_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/syncDataRVTest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_master_list"
                tools:listitem="@layout/sync_all_data_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/syncCollectionRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_master_list"
                tools:itemCount="1"
                tools:listitem="@layout/sync_all_data_list" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomRowCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/cancle"
            style="@style/inter_semibold"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/square_stroke_btn"
            android:text="@string/cancel_Btn"
            android:textAllCaps="false"
            android:textColor="@color/neutral700"
            android:textSize="@dimen/_10ssp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_sync_all"
            style="@style/inter_semibold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/square_btn"
            android:drawableLeft="@drawable/syncmaterdatalist_vector"
            android:text="@string/str_sync_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:drawablePadding="@dimen/_8sdp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>